2011-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* BUGS: New file.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Pass more appropriate video id to Linux.

	* grub-core/loader/i386/linux.c (grub_linux_setup_video): Use
	grub_video_get_driver_id and variable gfxpayloadforcelfb to
	fill have_vga.
	(grub_linux_boot): Rely on grub_linux_setup_video to fill have_vga and
	shift params->lfb_size.
	* include/grub/i386/linux.h: Make an enume out of have_vga values.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-menulst2cfg.c: Add missing include of misc.h.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfsinfo.c (grub_cmd_zfs_bootfs): Use comma as
	separator and pass bootpath/devid even if only one of them is available.
	Reported by: Seth Goldberg.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't use post-4G memory on EFI even if 64-bit since some non-compliant
	implementations bug on them.

	* grub-core/kern/efi/mm.c (grub_efi_allocate_pages): Skip post-4G
	memory.
	(filter_memory_map): Likewise.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-kbdcomp.in: Add missing prefix and exec_prefix variables.
	Reported by: nebuchadnezzar.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-kbdcomp.in: Add missing transform and bindir variables.
	Reported by: nebuchadnezzar.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Submenu default support.

	* grub-core/normal/menu.c (grub_menu_execute_entry): New parameter
	auto_boot. All users updated.
	Declared static.
	Handle chosen and default with submenus.
	(grub_menu_execute_with_fallback): Declared static.
	Don't notify failure if autobooted. Upper level does it.
	(menuentry_eq): New function.
	(get_entry_number): Use menuentry_eq.
	(show_menu): New parameter "autobooted". All users updated.
	(grub_show_menu): Likewise.
	* include/grub/normal.h (grub_show_menu): Likewise.